Remove Autocomplete category; fix various autocomplete layout issues

--- a/home/css/_theme.scss
+++ b/home/css/_theme.scss
@@ -6,6 +6,8 @@ $grey: #757575;
 $grey-light: #F5F5F5;
 $grey-dark: #424242;
 
+$border-color: #CCCCCC;
+
 $break-lg: 1200px;
 $break-md: 992px;
 
