--- a/home/css/faceted-search.css
+++ b/home/css/faceted-search.css
@@ -301,7 +301,6 @@ div.breadbox {
 }
 
 div.search-box {
-    white-space: nowrap;
     margin-top: 1em;
     margin-bottom: 1em;
 }
