--- a/home/css/zfin.css
+++ b/home/css/zfin.css
@@ -658,7 +658,7 @@ video {
 }
 
 .scrollable-dropdown-menu .tt-menu {
-    max-height: 250px;
+    max-height: 270px;
     overflow-y: auto;
 }
 
